// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Team API GET /teams should return list of teams 1`] = `
Array [
  Object {
    "testdata": "shared",
  },
]
`;

exports[`Team API GET /teams/1 should return 200 when user is in db 1`] = `
Object {
  "testData": "shared",
}
`;

exports[`Team API POST /teams should return 200 1`] = `
Object {
  "name": "HC Mountfield Hradec",
}
`;

exports[`Team API PUT /teams should return 200 and creates new user if does not exist already 1`] = `
Object {
  "username": "Zlin",
}
`;

exports[`Team API PUT /teams should return 204 1`] = `Object {}`;
